anubandha correction is complete

--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -58,7 +58,7 @@
 {\bf 29. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 %{\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
 {\bf 30. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2010\\
-{\bf 31. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
+{\bf 31. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& saM. DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 32. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 34. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1993\\
 {\bf 35. da.u.} & dakiSxNAmUtuyxRpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
@@ -151,7 +151,7 @@
 %{\bf 132. shi.sU.} & shivasUtarxmf &-& & kAshimxVra saMsakxqqta garxMthAvali\newline shirxVnagara, 1968\\
 %{\bf 133. shu.ya.veV.} & shukalxyajuveVRdaH &-& & veYdika saMshoVdhana maMDaLi\newline puNe\\
 {\bf 105. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx}\newline tatatxvXparxkAsha (BoVjarAja viracita) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA\newline meYsUru, 1974\\
-{\bf 106. sheY.u.} & sheYvoVpaniSatf &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri\newline madArxsf, 1925\\
+{\bf 106. sheY.u.} & sheYvoVpaniSatf &-& saM. paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri\newline madArxsf, 1925\\
 {\bf 107. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna\newline shivAcAyaR) &-& saM. ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya\newline meYsUru, 1950\\
 {\bf 108. sheY.ra.} & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-1) &-& saM. DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1992\\
 {\bf 109. sheY.ra.}  & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-2) &-& saM. malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA\newline soVlApura, 1909\\
