all prelims pages are sent to another proof

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -38,8 +38,8 @@
 \input tex-for-print/anubandha-2
 \newpage
 \input shubhasandesha
-\newpage
-\input nalkunudi
+%\newpage
+%\input nalkunudi
 \newpage
 \input parxkAshakaranudi
 \newpage
