--- a/nalkunudi.tex
+++ b/nalkunudi.tex
@@ -2,6 +2,42 @@
 {\Huge\bfseries shuBa hAreYke}
 \end{center}
 
+\thispagestyle{empty}
+
+\bigskip
+
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka sAmayx veYshiSaTxyXgaLu hAgu BinanxtegaLu ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. 
+
+\medskip
+
+``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire'', `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. ``deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA''. idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+
+\medskip
+
+parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavx\-pUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNaR vayxvasethx naMtaradalilx jAtigaLAgi parivataRne hoMdi\-davu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+
+\medskip
+
+pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx. anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx niVDidAdxre.
+
+\medskip
+
+saMpAdaka maMDaLiyu aviratavAgi sharxmisi I niGaMTanunx rUpiside. adara sharxma ililx sAthaRkagoMDide. niGaMTuvina\break kAyaRnivARhaka saMpAdakarAda DA. naMdiVshf haMceyavaru garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDu\-parxtiya sidadhxte - hiVge niGaMTu racaneya saMpUNaR javAbAdxriyanunx hotutx I sharxmadAyaka kelasavanunx sharxdedhxyiMda mADidAdxre. 
+\medskip
+
+I yoVjanege AthiRka neravu niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
+
+\vskip 1cm
+
+\hfill {\large\bf jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLu}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{center}
+{\Huge\bfseries shuBa hAreYke}
+\end{center}
+
 \bigskip
 
 `shivapada ratanxkoVsha' atuyxpayukatxvAda amUlayx kaqti. shivadhamaR, saMsakxqqti, sidAdhxMtagaLanunx yathAvatAtxgi paricayisuva baqhatf padaBAMDAravidu. ililxruva ulelxVKagaLu nAlUkxvare sahasarx; ililxruva padaparxyoVgagaLu adara hatutx pAlu! ALavAda, visAtxravAda shivadashaRnAdhayxyanakekx idu sahakAri.
@@ -17,5 +53,5 @@ paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR,
 \vskip 1.5cm
 
 \noindent
-di : 28-12-2019\hfill sidedhxVshavxra sAvxmigaLu\qquad\,\\
+di : 28-12-2019\hfill {\large\bf sidedhxVshavxra sAvxmigaLu}\qquad\,\\
 \phantom{a} \hfill jAcnxnayoVgAsharxma, vijayapura
