--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -1,50 +1,47 @@
-%\newpage
-
-%\thispagestyle{empty}
-
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=.95]{images/Shubha1.eps}
-%\end{figure}
-
-%\newpage
-
-%\thispagestyle{empty}
-
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=.95]{images/Shubha2.eps}
-%\end{figure}
-
-\begin{center}
-{\Huge\bfseries shuBa hAreYke}
-\end{center}
+\newpage
 
 \thispagestyle{empty}
 
-\bigskip
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1.15]{images/001.eps}
+\end{figure}
 
-jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka sAmayx veYshiSaTxyXgaLu hAgu BinanxtegaLu ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. 
+\newpage
 
-\medskip
+\thispagestyle{empty}
 
-``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire'', `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. ``deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA''. idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+\begin{figure}[H]
+\centering
+\includegraphics[scale=.98]{images/002.eps}
+\end{figure}
 
-\medskip
+\newpage
 
-parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavx\-pUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNaR vayxvasethx naMtaradalilx jAtigaLAgi parivataRne hoMdi\-davu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+\thispagestyle{empty}
 
-\medskip
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1.1]{images/003.eps}
+\end{figure}
 
-pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx. anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx niVDidAdxre.
+\newpage
 
-\medskip
+\thispagestyle{empty}
 
-saMpAdaka maMDaLiyu aviratavAgi sharxmisi I niGaMTanunx rUpiside. adara sharxma ililx sAthaRkagoMDide. niGaMTuvina kAyaRnivARhaka saMpAdakavanunx DA. naMdiVshf haMce nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya saMpUNaR javAbAdxriyanunx hotutx I sharxmadAyaka kelasavanunx sharxdedhxyiMda mADidAdxre. 
-\medskip
+\begin{figure}[H]
+\centering
+\includegraphics[scale=.84]{images/004.eps}
+\end{figure}
 
-I yoVjanege AthiRka neravu niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
+\newpage
 
-\vskip 1cm
+\thispagestyle{empty}
 
-\hfill {\large\bf jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLu}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1.15]{images/005.eps}
+\end{figure}
+
+
+
