All pages are sent to print

--- a/jss-anukramanike1.tex
+++ b/jss-anukramanike1.tex
@@ -2460,7 +2460,7 @@
 {ELavasethx}, \pageref{ELavasethx}
 
 \noindent
-{{\large\textbf{ai}}kayx}, \pageref{aikayx}
+{{\large\textbf{ai}}kayx}, \pageref{aikayx-1}
 
 \noindent
 {aikayxpada}, \pageref{aikayxpada}
@@ -2676,7 +2676,7 @@
 {katARra}, \pageref{katARra}
 
 \noindent
-{katARrana kamamxTa}, \pageref{katARrana kamamxTa}
+{katARrana kamamxTa}, \pageref{katARrana kamamxTa-1}
 
 \noindent
 {katuR}, \pageref{katuR}
