--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -13890,7 +13890,7 @@ tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf |\\[-3pt]
 \medskip
 
 \begin{entry}
-\word{aikayx}\label{aikayx}
+\word{aikayx}\label{aikayx-1}
 %\meaning{\arthanonum{shivatatatxvXdalilx beretuhoVguvudu.}}
 %\newmeaning{\arthanonum{liMgAMga sAmarasayxvanunx sAdhisidavanu.}}
 %\newmeaning{\arthanonum{shiva-jiVva eMba uBayaBArxMtiyilalxda sAdhaka. SaTfsathxlagaLalilx koneya sathxla.}}
@@ -15401,7 +15401,7 @@ jAcnxnashakitxdashAMsheVna kataqRsAdAKayxmudaBxvamf |
 \end{entry}
 
 \begin{entry}
-\word{katARrana kamamxTa}\label{katARrana kamamxTa}
+\word{katARrana kamamxTa}\label{katARrana kamamxTa-1}
 \src{va}
 \meaning{\arthanonum{saqSiTxkataRnAda \hbox{parashivana} kamamxTa. kamAmxranu tananx kamamxTadalilx vasutxgaLanunx rUpisuvaMte elalx jiVvigaLu matayxRloVkadalilx tamamx jiVvanavanunx rUpisikoLaLxbeVku:}
 \ullekha{mataRyxloVka\-veMbudu katARrana kamamxTavayAyx, ililx salulxvaru alilxyU\break salulxvarayAyx. ililx salalxdavaru alilxyU salalxru kUDala\-saMgamadeVvA (savasaM. 1; basava. 155-40); paqthivx eMbudu katARrana {kamamxTa} acicxna moLe bANasada mane. tanumanadhanaM\-gaLelalxvu namamx guheVshavxraliMgada somumx (savasaM. 2; alalxma. 1479-438); atiRyiMda mADuva Bakitx, katARrana kamamxTa\-kokxLagAyitutx. satayxdiMda mADuva Bakitx, katARrana kamamxTakekx horagAyitutx (savasaM. 9; shivaleM. 220-74).}}
