All pages are sent to print

--- a/copyright.tex
+++ b/copyright.tex
@@ -7,7 +7,7 @@
 {\rm Edited by Editorial Committee}\\
 {\rm Executive Editor : Dr. Nandish Hanche}\\
 {\rm Published by JSS Granthamale, Mysuru 570 004}\\[8pt]
-{\rm Pages : 40 + 896}
+{\rm Pages : xl + 896}
 
 \vspace{1cm}
 
@@ -44,7 +44,7 @@
 saMpAdane : saMpAdaka samiti\\
 kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
 parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru 570 004\\[8pt]
-puTagaLu : 40 + 896
+puTagaLu : {\rm xl} + 896
 
 \vspace{1cm}
 
