--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=1.15]{images/001.eps}
+\includegraphics[scale=.84]{images/001.eps}
 \end{figure}
 
 \newpage
@@ -13,7 +13,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.98]{images/002.eps}
+\includegraphics{images/002.eps}
 \end{figure}
 
 \newpage
@@ -22,7 +22,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=1.1]{images/003.eps}
+\includegraphics[scale=.8]{images/003.eps}
 \end{figure}
 
 \newpage
@@ -31,7 +31,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.84]{images/004.eps}
+\includegraphics[scale=.8]{images/004.eps}
 \end{figure}
 
 \newpage
@@ -40,7 +40,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=1.15]{images/005.eps}
+\includegraphics[scale=.8]{images/005.eps}
 \end{figure}
 
 
