selected 5 pages for print

--- a/copyright.tex
+++ b/copyright.tex
@@ -5,7 +5,8 @@
 
 \noindent
 {\rm Edited by Editorial Committee}\\
-{\rm Executive Editor : Dr. Nandish Hanche}\\
+{\rm Honorary Editor : Jagadguru Shi Shivarathri Deshikendra Mahaswamigalu}\\
+{\rm Executive Editor : Dr. Nandeesh Hanchye}\\
 {\rm Published by JSS Granthamale, Mysuru 570 004}\\[8pt]
 {\rm Pages : xl + 896}
 
@@ -42,6 +43,7 @@
 
 \noindent
 saMpAdane : saMpAdaka samiti\\
+gwrava saMpAdakaru : jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru\\
 kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
 parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru 570 004\\[8pt]
 puTagaLu : {\rm xl} + 896
@@ -73,6 +75,26 @@ mudarxkaru : lakiSxmXV mudarxNAlaya, beMgaLUru.
 \vfill
 
 \begin{center}
+
+
+{\Large\bf gwrava saMpAdakaru}\\
+
+\medskip
+
+{\large paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru}
+
+\vskip 1cm
+
+{\Large\bf kAyaRnivARhaka saMpAdaka}
+
+\medskip
+
+{\fontsize{14pt}{16pt}\selectfont
+DA. naMdiVshf haMce}\relax
+
+\vskip 1cm
+
+
 {\Large\bf saMpAdaka samiti}
 
 \bigskip
@@ -85,8 +107,7 @@ DA. enf.esf. tArAnAtha\\[8pt]
 vidAvxnf DA. ecf.vi. nAgarAjarAvf\\[8pt]
 vidAvxnf DA. si. shivakumArasAvxmi\\[8pt]
 shirxV Arf.esf. pUNARnaMda\\[15pt]
-{\bf kAyaRnivARhaka saMpAdaka}\\[8pt]
-DA. naMdiVshf haMce }\relax
+}\relax
 \end{center}
 
 \vfill
