--- a/nivedane.tex
+++ b/nivedane.tex
@@ -248,7 +248,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \end{center}
 \smallskip
 
-iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx\-vAgisuva avara mahAnf ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxka\-vAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara nimARNa, rUpugoLuLxvikeya hiMde pUjayxra saMkalapxshakitx kelasa mADide. avaru saMpAdaka samitige odagisikoTaTx swlaBayx, swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte paramapUjayxru noVDikoMDaru. saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayxvanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
+iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru I niGaMTuvina gwrava saMpAdakaru Ada sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx\break deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx\-vAgisuva avara mahAnf ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxka\-vAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara\break nimARNa, rUpugoLuLxvikeya hiMde pUjayxra saMkalapxshakitx kelasa mADide. avaru saMpAdaka samitige odagisikoTaTx swlaBayx,\break swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte parama\-pUjayxru noVDikoMDaru. saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayx\-vanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
 
 \smallskip
 
