--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -20,7 +20,7 @@ parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si.~shivapapx, parxsutxta 
 
 \smallskip
 
-I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada pUjayx shirxV sidedhxVshavxrasAvxmigaLavarige namamx gwravada maNihavanunx salilxsa\-bayasutetxVve.
+I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida I niGaMTuvina gwrava saMpAdakarU paramapUjayx jagadugxrugaLU Ada shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada pUjayx shirxV sidedhxVshavxrasAvxmigaLavarige namamx gwravada maNihavanunx salilxsa\-bayasutetxVve.
 
 \smallskip
 
