--- a/tex-for-print/ya-La.tex
+++ b/tex-for-print/ya-La.tex
@@ -13478,7 +13478,7 @@ iMdArxdiloVkapAlAshacx vajArxdiVnAyxyudhAni ca ||\\[-1pt]
 \medskip
 \pauthor{(shi. ta. ra., 9. 3. 42-43)}
 \smallskip
-\newmeaning{\ullekha{pArxNaliMga liMgapArxNaveMba saMdu saMshayavaLidu shudadhxvidAyx\-tiVta niVneV (savasaM. 6; Adayayx. 878-265); karxmisipaR shudadhxvideyxya vasatxrX, tirxguNAgamAtiVtamAda jAcnxnave yajacnxsUtarx (savasaM. 9; shAMtaviV 1443-539); opupxtitxha shudadhxvideyxyeV piVThavAda shivaliMgavoMdaralilx, daqDhaBakitxyuLaLxvana deVhaveV liMga\-deVhavu (savasaM. 11; savxtaMtarx. 913-456); videyxye satavxmavideyxye tamavadu vidAyx\-videyxya rajoVguNavakukx ...videyxyoLUkxDada videyxyoLebxrasade vidAyxvidayx\-gaLeMberaDa{\ro}Lu podadxde parataramAgi toV{\ru}va shudadhxvideyxyeMda{\ri} ninanxnu (paramA. 241-8, 10); citatx madhayxmeyeMba vAkakxMtadA jAcnxna\-vetatx shakitxye shudadhxvideyxyumaneVLipududAtatxdiVshavxranalilx (viVsheYpu. 6-97-36).}}
+\newmeaning{\ullekha{pArxNaliMga liMgapArxNaveMba saMdu saMshayavaLidu shudadhxvidAyx\-tiVta niVneV (savasaM. 6; Adayayx. 878-265); karxmisipaR shudadhxvideyxya vasatxrX, tirxguNAgamAtiVtamAda jAcnxnave yajacnx\-sUtarx (savasaM. 9; shAMtaviV 1443-539); opupxtitxha shudadhx\-videyxyeV piVThavAda shivaliMgavoMdaralilx, daqDhaBakitxyuLaLxvana deVhaveV liMga\-deVhavu (savasaM. 11; savxtaMtarx. 913-456); videyxye satavxmavideyxye tamavadu vidAyx\-videyxya rajoVguNavakukx ...videyxyoLUkxDada videyxyoLebxrasade vidAyxvidayx\-gaLeMberaDa{\ro}Lu podadxde parataramAgi toV{\ru}va shudadhxvideyxyeMda{\ri} ninanxnu (paramA. 241-8, 10); citatx madhayxmeyeMba vAkakxMtadA jAcnxna\-vetatx shakitxye shudadhxvideyxyumaneVLipududAtatxdiVshavxranalilx (viVsheYpu. 6-97-36).}}
 \vskip 5pt
 \newmeaning{\ni{shudAdhx ca asw vidAyx ca - shudadhxvidAyx}}
 \end{entry}
