--- a/title.tex
+++ b/title.tex
@@ -13,6 +13,23 @@
 \vfill
 
 
+\begin{center}
+{\large\bf gwrava saMpAdakaru}
+
+\medskip
+
+{\large paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru}
+
+\bigskip
+\bigskip
+
+{\large\bf kAyaRnivARhaka saMpAdakaru}
+
+\medskip
+
+{\large DA. naMdiVshf haMce}
+
+\end{center}
 
 \vfill
 
