5 corrections are incorporate

--- a/copyright.tex
+++ b/copyright.tex
@@ -5,7 +5,7 @@
 
 \noindent
 {\rm Edited by Editorial Committee}\\
-{\rm Honorary Editor : Jagadguru Shi Shivarathri Deshikendra Mahaswamigalu}\\
+{\rm Honorary Editor : Jagadguru Sri Shivarathri Deshikendra Mahaswamigalu}\\
 {\rm Executive Editor : Dr. Nandeesh Hanchye}\\
 {\rm Published by JSS Granthamale, Mysuru 570 004}\\[8pt]
 {\rm Pages : xl + 896}
@@ -16,12 +16,12 @@
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2020}\\[7pt]
 {\rm No. of Copies : 2000}\\[7pt]
-{\rm Price : \rupee\,1000}
+{\rm Price : \rupee\,1,000}
 
 \bigskip
 
 \noindent
-{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapattna}
+{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapattana}
 
 \medskip
 
@@ -54,7 +54,7 @@ puTagaLu : {\rm xl} + 896
 {\rm \copyright} parxkAshakaru\\[7pt]
 parxthama mudarxNa : 2020\\[7pt]
 parxtigaLu : 2000\\[10pt]
-bele : \rupee\,1000
+bele : \rupee\,1,000
 
 \bigskip
 
@@ -64,7 +64,7 @@ akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., sh
 \medskip
 
 \noindent
-mudarxkaru : lakiSxmXV mudarxNAlaya, beMgaLUru.
+mudarxkaru : lakiSxmXV mudarxNAlaya, beMgaLUru
 
 \newpage
 
@@ -85,7 +85,7 @@ mudarxkaru : lakiSxmXV mudarxNAlaya, beMgaLUru.
 
 \vskip 1cm
 
-{\Large\bf kAyaRnivARhaka saMpAdaka}
+{\Large\bf kAyaRnivARhaka saMpAdakaru}
 
 \medskip
 
