title, copyright pages are updated

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,7 +1,9 @@
 \thispagestyle{empty}
 \noindent
-{\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[5pt]
-{\rm (Veerashaiva-Lingayata Paribhashika Padakosha)} 
+{\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[3pt]
+{\rm Veerashaiva-Lingayata Paribhashika Padakosha} 
+
+\medskip
 
 \noindent
 {\rm Edited by Editorial Committee}\\
@@ -36,10 +38,10 @@
 \vskip 1cm
 
 \noindent
-{\bf\large shivapada ratanxkoVsha}\\[5pt]
-(viVrasheYva-liMgAyata pAriBASika padakoVsha) 
+{\bf\large shivapada ratanxkoVsha}\\[3pt]
+viVrasheYva-liMgAyata pAriBASika padakoVsha 
 
-\smallskip
+\medskip
 
 \noindent
 saMpAdane : saMpAdaka samiti\\
