--- a/title.tex
+++ b/title.tex
@@ -7,27 +7,27 @@
 
 \medskip
 
-{\LARGE\bfseries (viVrasheYva-liMgAyata pAriBASika padakoVsha)}
+{\LARGE\bfseries viVrasheYva-liMgAyata pAriBASika padakoVsha}
 \end{center}
 
 \vfill
 
 
 \begin{center}
-{\large\bf gwrava saMpAdakaru}
+{gwrava saMpAdakaru}
 
 \medskip
 
-{\large paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru}
+{\large\bf paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru}
 
 \bigskip
 \bigskip
 
-{\large\bf kAyaRnivARhaka saMpAdakaru}
+{kAyaRnivARhaka saMpAdakaru}
 
 \medskip
 
-{\large DA. naMdiVshf haMce}
+{\large\bf DA. naMdiVshf haMce}
 
 \end{center}
 
